--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <div>Let's Play the GAME</div>
-    <div class="playerSelection">
-    <button class="RockButton" onclick="">ROCK</button>
-    <button class="PaperButton" onclick="">PAPER</button>
-    <button class="ScissorsButton" onclick="">SCISSORS</button>
+    <h1>Let's Play the GAME!</h1>
+    <div class="body">
+        <div class="replay"><button class="playAgain">play again</button></div>
+        <div class="Result"></div>
+        <div class="Result"></div>
+        <div class="container">
+            <div class="playerSelection">
+                <button class="RockButton" onclick=""><img src="/pic/rock.png" alt="Rock" width="150px"></button>
+                <button class="PaperButton" onclick=""><img src="/pic/paper.png" alt="Paper" width="150px"></button>
+                <button class="ScissorsButton" onclick=""><img src="/pic/scissors.png" alt="scissors"
+                        width="120px"></button>
+            </div>
+            <div class="score">
+                <div class="playerScore">Player Score</div>
+                <div class="computerScore">Computer Score</div>
+            </div>
+                    
+        </div>
     </div>
-    <div class="computerSelection"></div>
-    <p class="playerScore" >Player</p>
-    <p class="computerScore" >Computer</p>
-    <div class="result">
-    <p class="Result"></p>
-    <p class="finalResult"></p>
     </div>
-
-
-    <script src="/Rock-Paper-Scissors/script.js">
-    </script>
+    <script src="/script.js"></script>
 </body>
+
 </html>
